# syntraflow

./: .env.example  .gitignore  LICENSE  README.md  agent.md  api.py  pyproject.toml  setup.py  syntraflow.md
config/: .gitkeep
deploy/: .gitkeep
docs/features/: .gitkeep
scripts/: .gitkeep
src/: ingestion.py  main.py  mcp_server.py  retrieval.py  worker.py
src/agents/: .gitkeep
src/api/: .gitkeep
src/core/: config.py
src/core/schemas/: .gitkeep
src/database/: client.py  models.py
src/ingestion/: __init__.py  chunkers.py  pipeline.py  processors.py  strategies.py
src/utils/: .gitkeep
src/vectors/: client.py
tests/: test_chunkers.py  test_ingestion_api.py  test_processors.py  test_strategies.py
tests/evaluation/: .gitkeep
tests/integration/: .gitkeep  test_ingestion_api_integration.py
tests/unit/: .gitkeep  test_ingestion_api.py  test_layout_chunking.py  test_syntraflow_features.py
